# reqs

./: .gitignore  Cargo.toml  README.md  audit.sh  build.sh
completions/: reqs.bash
man/: reqs.1
src/: main.rs
