[package]
name = "reqs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reqs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
humantime = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
